--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,6 +1,6 @@
 ---
 - id: read_more
-  translation: Weiterlesen...
+  translation: Weiterlesen
 - id: address
   translation: Unsere Adresse
 - id: phone
